--- a/client/src/Gallery.css
+++ b/client/src/Gallery.css
@@ -28,17 +28,24 @@
 }
 
 .pagination {
-  margin: 3rem auto 0 auto;
+  margin: 4rem auto;
 }
+
+#gallery > div > div.pagination > nav > ul > li > button {
+  margin: 0 0.25rem;
+}
+
 .pagination p {
+  border: 1px solid red;
   text-align: center;
 }
 
 .pagination button {
   background-color: #e0c123 !important;
 }
+
 .pagination button:hover {
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 .pagination svg {
@@ -46,8 +53,11 @@
 }
 
 .MuiPaginationItem-root.Mui-selected {
-  scale: 1.2;
-  margin-top: 0.5rem;
+  color: #ffd70d;
+  background-color: #272727 !important;
+  border: 2px solid #ffd70d;
+  scale: 1.3;
+  margin: 0 0.75rem 0.75rem 0.75rem !important;
 }
 
 #gallery
@@ -74,15 +84,46 @@
 }
 
 #gallery > div > div.pagination > nav > ul > li > button {
-  font-weight: 500;
+  font-weight: 900 !important;
+}
+
+#gallery > div > div.cheveron-container {
+  margin-top: 2rem;
+}
+
+#gallery > div > div.cheveron-container > p {
+  margin-top: -1.5rem;
 }
 
 @media only screen and (min-width: 768px) {
+  .MuiPaginationItem-root.Mui-selected {
+    color: #ffd70d;
+    background-color: #272727 !important;
+    border: 2px solid #ffd70d;
+    scale: 1.3;
+    margin: 0 0.75rem 0.75rem 0.75rem;
+  }
   .gallery-container > h1 {
     font-size: clamp(2.5rem, 2.25vw + 0.5rem, 3rem) !important;
   }
   #gallery > div > div > div > h2 {
     font-size: clamp(1.25rem, 1.5vw + 0.5rem, 2rem) !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #gallery
+    > div
+    > div.pagination
+    > nav
+    > ul
+    > li
+    > :not(button.Mui-selected):not(
+      #gallery > div > div.pagination > nav > ul > li:nth-child(1) > button
+    ):not(
+      #gallery > div > div.pagination > nav > ul > li:nth-child(7) > button
+    ) {
+    display: none;
   }
 }
 
